--- a/index.html
+++ b/index.html
@@ -6,12 +6,11 @@
     <meta name="viewport" content="viewport-fit=cover, width=device-width, initial-scale=1.0, minimum-scale=1.0, maximum-scale=1.0, user-scalable=no" />
 
     <!-- add to homescreen for ios -->
-    <meta name="apple-mobile-web-app-capable" content="yes" />
-    <meta name="apple-mobile-web-app-title" content="Test App" />
-    <meta name="apple-mobile-web-app-status-bar-style" content="default" />
+    <meta name="mobile-web-app-capable" content="yes" />
+    <meta name="mobile-web-app-title" content="Ampersand" />
+    <meta name="mobile-web-app-status-bar-style" content="default" />
     <meta name="format-detection" content="telephone=no">
-
-    <script type="module" src="/src/main.ts"></script>
+    <title>Ampersand</title>
   </head>
   <body>
   </body>
