add web manifest

--- a/index.html
+++ b/index.html
@@ -3,13 +3,12 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="color-scheme" content="light dark" />
-    <meta name="viewport" content="viewport-fit=cover, width=device-width, initial-scale=1.0, minimum-scale=1.0, maximum-scale=1.0, user-scalable=no" />
-
-    <!-- add to homescreen for ios -->
-    <meta name="mobile-web-app-capable" content="yes" />
-    <meta name="mobile-web-app-title" content="Ampersand" />
-    <meta name="mobile-web-app-status-bar-style" content="default" />
     <meta name="format-detection" content="telephone=no">
+    <meta name="viewport" content="viewport-fit=cover, width=device-width, initial-scale=1.0, minimum-scale=1.0, maximum-scale=1.0, user-scalable=no" />
+    <link rel="apple-touch-icon" sizes="180x180" href="/static/images/favicon-180x.png" />
+    <link rel="icon shortcut" href="/static/images/favicon-128x.png">
+    <link rel="manifest" href="ampersand.webmanifest" />
+
     <title>Ampersand</title>
   </head>
   <body>
